# pdf-to-markdown-desktop

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/decisions/: 0001-ocr-fallback.md  0002-ocr-engine.md
src/pdf2md/: __main__.py  app.py  converter.py
tests/unit/: test_app.py  test_converter.py  test_package.py
